# synth

./: .gitignore  README.md  synth.cabal
src/: Main.hs
